--- a/PianoView/Base.lproj/Main.storyboard
+++ b/PianoView/Base.lproj/Main.storyboard
@@ -103,6 +103,9 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="pianoView" destination="BzN-Ce-LKE" id="lbF-uQ-WgY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
